fixed white space on small devices

--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -41,4 +41,13 @@
 			}
 		}
 	}
+
+	.map {
+		&__box {
+			iframe {
+				width: 100%;
+				height: 800px;
+			}
+		}
+	}
 }
