--- a/sass/main.scss
+++ b/sass/main.scss
@@ -450,11 +450,11 @@ body {
 		justify-content: center;
 		margin-top: 5rem;
 	}
+}
 
-	.contact-page {
-		.footer {
-			background-color: red;
-		}
+.contact-page {
+	.footer {
+		margin-top: 0px;
 	}
 }
 
